remove dependency from main
Signed-off-by: Kelly Greco <kelly@swirldslabs.com>